<resources>
    <string name="app_name">CryptoAndela</string>
    <string name="currency">CURRENCY</string>
    <string name="btc">BTC</string>
    <string name="eth">ETH</string>

    <string name="btc_sign">BTC:</string>
    <string name="eth_sign">ETH:</string>

    <string name="amount_hint">0.00</string>

    <string name="convert">Convert</string>
    <string name="back_button">Back</string>
</resources>
