<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="24dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/full_name_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:gravity="end"
                android:text="@string/btc_sign"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/btc_value_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/amount_hint"
                android:inputType="numberDecimal"
                android:padding="8dp"
                android:selectAllOnFocus="true"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="24dp"
                card_view:cardBackgroundColor="@color/colorPrimary"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="0dp">

                <Button
                    android:id="@+id/btc_convert_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:onClick="doConvert"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:text="@string/convert"
                    android:textColor="#fff" />

            </android.support.v7.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:gravity="end"
                android:text="@string/eth_sign"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/eth_value_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/amount_hint"
                android:inputType="numberDecimal"
                android:padding="8dp"
                android:selectAllOnFocus="true"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="24dp"
                card_view:cardBackgroundColor="@color/colorPrimary"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="0dp">

                <Button
                    android:id="@+id/eth_convert_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:onClick="doConvert"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:text="@string/convert"
                    android:textColor="#fff" />

            </android.support.v7.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/money_code_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:gravity="end"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/flat_value_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/amount_hint"
                android:inputType="numberDecimal"
                android:padding="8dp"
                android:selectAllOnFocus="true"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="24dp"
                card_view:cardBackgroundColor="@color/colorPrimary"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="0dp">

                <Button
                    android:id="@+id/flat_convert_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:onClick="doConvert"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:text="@string/convert"
                    android:textColor="#fff" />

            </android.support.v7.widget.CardView>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/herst"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/just_a_line"
                android:layout_width="match_parent"
                android:layout_height="0.8dp"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/darker_gray" />

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/just_a_line"
                android:layout_centerHorizontal="true"
                android:layout_margin="4dp"
                card_view:cardBackgroundColor="@color/colorGold"
                card_view:cardCornerRadius="2dp"
                card_view:cardElevation="2dp">

                <Button
                    android:id="@+id/back_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/black"
                    android:text="@string/back_button"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />

            </android.support.v7.widget.CardView>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>